--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,13 @@ edition = "2021"
 clap = "4.4.4"
 clap-verbosity-flag = "2.0.1"
 env_logger = "0.10.0"
+lazy_static = "1.4.0"
 log = "0.4.20"
 miette = { version = "5.10.0", features = ["fancy"] }
+uname = "0.1.1"
+detect-targets = "0.1.11"
+tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
+regex = "1.9.5"
+reqwest = { version = "0.11.20", features = ["json"] }
+serde_json = "1.0.107"
+serde = { version = "1.0.188", features = ["derive"] }
