--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: yen-${{ matrix.target }}
-          path: ${{ steps.package.outputs.BIN_PATH }}
+          path: ${{ steps.bin.outputs.BIN_PATH }}
 
       - name: Publish packages
         uses: softprops/action-gh-release@v1
@@ -151,8 +151,7 @@ jobs:
         with:
           draft: true
           files: |
-            ${{ steps.package.outputs.PKG_PATH }}
-            ${{ steps.package.outputs.BIN_PATH }}
-            target/wix/pixi-${{ matrix.target }}.msi
+            ${{ steps.bin.outputs.PKG_PATH }}
+            ${{ steps.bin.outputs.BIN_PATH }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
