--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,7 +137,10 @@ jobs:
           # Setup paths
           BIN_NAME="${{ needs.crate_metadata.outputs.name }}"
           BIN_PATH="target/${{ matrix.target }}/release/${BIN_NAME}"
-
+          
+          mv $BIN_PATH $BIN_PATH-${{matrix.target}}
+          BIN_PATH=$BIN_PATH-${{matrix.target}}
+          
           # Let subsequent steps know where to find the binary
           echo "BIN_PATH=${BIN_PATH}" >> $GITHUB_OUTPUT
           echo "BIN_NAME=${BIN_NAME}" >> $GITHUB_OUTPUT
